routes/splunk-deployment-server-route.yaml
  apiVersion: v1
  kind: Route
  metadata:
    name: splunk-deployment-server
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: splunk-deployment-server
