routes/splunk-indexer-route.yaml
  apiVersion: v1
  kind: Route
  metadata:
    name: splunk-indexer
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: splunk-indexer
